# scitex-cv

./: .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-cv-quality-audit-on-ubuntu-latest.yml
docs/sphinx/: api.rst  conf.py
examples/: quickstart.py
src/scitex_cv/: __init__.py  __main__.py  _cli.py  _ocr.py  _system_deps.py
src/scitex_cv/_cli/: __init__.py
src/scitex_cv/_dev/: _compose.py
src/scitex_cv/_skills/scitex-cv/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_cv/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_cv/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_cv/_sphinx_html/.doctrees/api/: scitex_cv.doctree
src/scitex_cv/_sphinx_html/_modules/: index.html
src/scitex_cv/_sphinx_html/_modules/scitex_cv/: _draw.html  _filters.html  _io.html  _transform.html
src/scitex_cv/_sphinx_html/_sources/api/: scitex_cv.rst.txt
src/scitex_cv/_sphinx_html/api/: scitex_cv.html
tests/develop/: test_audit.py
tests/integration/: test_cross_package_imports.py  test_lazy_cv2_import.py
tests/scitex_cv/: test__cli.py  test__ocr.py  test__system_deps.py
