[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-cv"
version = "0.2.0"
description = "Small cv2/Pillow image-processing utilities (load/save, resize/rotate/crop, blur/sharpen/edge, drawing) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "computer-vision", "opencv", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    # Headless OpenCV: its manylinux wheel bundles all native libs and pulls
    # in NO X11/OpenGL/GLib system libraries (verified via ldd + runtime
    # loaded-libs over scitex-cv's cv2 ops), so the package imports on a
    # minimal/headless base with no apt installs. scitex-cv uses no GUI cv2
    # (imshow etc.); install `opencv-python` yourself if you need it.
    "opencv-python-headless",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",        # tests/.github workflow uses --timeout=120
    "coverage>=7.0",         # subprocess coverage wiring
    "ruff",
    "scitex-dev[cli-audit]>=0.11.7",  # tests/develop/test_audit.py
    "matplotlib",            # tests/scitex_cv/_dev/test__compose.py + src/scitex_cv/_dev/_title_card.py
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-cv[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-cv"
Repository = "https://github.com/ywatanabe1989/scitex-cv"
Documentation = "https://scitex-cv.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_cv = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-cv = "scitex_cv"

[project.entry-points."scitex_dev.system_deps"]
scitex-cv = "scitex_cv._system_deps:provide"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_cv"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "apps", "config", "docs", "examples"]
